Criado e aplicando migrations

--- a/Todo/Todo.Api/appsettings.Development.json
+++ b/Todo/Todo.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "connectionString": "Server=localhost; Database=todos; User ID=sa; Password=rafDataBase@64; TrustServerCertificate=True;"
   }
 }
