--- a/Todo/Todo.Api/appsettings.json
+++ b/Todo/Todo.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "connectionString": "Server=localhost; Database=todos; User ID=sa; Password=rafDataBase@64; TrustServerCertificate=True;"
+  }
 }
