--- a/Todo/ToDo.FrontEnd.Angular/package.json
+++ b/Todo/ToDo.FrontEnd.Angular/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "to-do.front-end.angular",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/fire": "^7.6.1",
-    "@angular/forms": "^16.2.0",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
-    "firebase": "^10.4.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.2",
-    "@angular/cli": "~16.2.2",
-    "@angular/compiler-cli": "^16.2.0",
-    "typescript": "~5.1.3"
-  }
+	"name": "to-do.front-end.angular",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^16.2.0",
+		"@angular/common": "^16.2.0",
+		"@angular/compiler": "^16.2.0",
+		"@angular/core": "^16.2.0",
+		"@angular/fire": "^7.6.1",
+		"@angular/forms": "^16.2.7",
+		"@angular/platform-browser": "^16.2.0",
+		"@angular/platform-browser-dynamic": "^16.2.7",
+		"@angular/router": "^16.2.7",
+		"@popperjs/core": "^2.11.8",
+		"bootstrap": "^5.3.2",
+		"bootstrap-icons": "^1.11.1",
+		"firebase": "^9.16.0",
+		"rxjs": "~7.8.0",
+		"tslib": "^2.6.2",
+		"zone.js": "^0.13.3"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^16.2.4",
+		"@angular/cli": "~16.2.2",
+		"@angular/compiler-cli": "^16.2.7",
+		"typescript": "~5.1.3"
+	}
 }
